// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "TEST1",
      "$3" => 10,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 2n,
      "$2" => "TEST2",
      "$3" => 20,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 3 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 3n,
      "$2" => "TEST3",
      "$3" => 30,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity and update all insert generated column (createdDate, default) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 10n,
    }
,
    "query": 
"SELECT "entity0"."id",
	"entity0"."bigint",
	"entity0"."binary",
	"entity0"."boolean",
	"entity0"."date",
	"entity0"."plainDate",
	"entity0"."dateTime",
	"entity0"."instant",
	"entity0"."decimal",
	"entity0"."decimalNumber",
	"entity0"."decimalDecimal",
	"entity0"."deleted",
	"entity0"."identifier",
	"entity0"."identifierString",
	"entity0"."integer",
	"entity0"."real",
	"entity0"."string",
	"entity0"."time",
	"entity0"."plainTime",
	"entity0"."createdDate",
	"entity0"."modifiedDate"
FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))
ORDER BY "entity0"."id"
FETCH NEXT 1 ROWS ONLY"
,
    "type": 1,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => 10n,
      "$2" => "detail 1",
      "$3" => 1,
      "$4" => 10n,
      "$5" => "detail 2",
      "$6" => 2,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => 10n,
          "$2" => "detail 1",
          "$3" => 1,
        }
,
        "query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => 10n,
          "$2" => "detail 2",
          "$3" => 2,
        }
,
        "query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted";

INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($4,$5,$6,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
    "_type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with it relation correctly (auto pk) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => "Insert 2",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 1",
      "$3" => 1,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 2",
      "$3" => 2,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 21",
      "$3" => 2,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should trigger before/after save event 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Insert 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should bulk insert 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"INSERT INTO "Table1Manies" ("name")
SELECT (CONCAT('Detail of parent ', CAST("entity0"."id" AS text))) AS "column1"
FROM "fixture"."Table1s" AS "entity0"
LEFT JOIN (
	SELECT "entity1"."table1Id",
		COUNT("entity1".*) AS "column0"
	FROM "Table1Manies" AS "entity1"
	WHERE ("entity1"."deleted"=false)
	GROUP BY "entity1"."table1Id"
) AS "entity1" ON ("entity0"."id"="entity1"."table1Id")
WHERE (("entity0"."deleted"=false) AND ((COALESCE("entity1"."column0", 0))<=0))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should bulk insert entity for non auto pk when updating more than 10 entity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "TEST1",
      "$3" => 10,
      "$4" => 2n,
      "$5" => "TEST2",
      "$6" => 20,
      "$7" => 3n,
      "$8" => "TEST3",
      "$9" => 30,
      "$10" => 4n,
      "$11" => "TEST4",
      "$12" => 40,
      "$13" => 5n,
      "$14" => "TEST5",
      "$15" => 50,
      "$16" => 6n,
      "$17" => "TEST6",
      "$18" => 60,
      "$19" => 7n,
      "$20" => "TEST7",
      "$21" => 70,
      "$22" => 8n,
      "$23" => "TEST8",
      "$24" => 80,
      "$25" => 9n,
      "$26" => "TEST9",
      "$27" => 90,
      "$28" => 10n,
      "$29" => "TEST10",
      "$30" => 100,
      "$31" => 11n,
      "$32" => "TEST11",
      "$33" => 110,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3),
	($4,$5,$6),
	($7,$8,$9),
	($10,$11,$12),
	($13,$14,$15),
	($16,$17,$18),
	($19,$20,$21),
	($22,$23,$24),
	($25,$26,$27),
	($28,$29,$30),
	($31,$32,$33)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should do upsert 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11,
      "$2" => "Original",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,$2,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1
WHERE ("entity0"."table1Id"=$2)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "Updated",
      "$3" => 11,
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $2,
	"number" = $3
WHERE ("entity0"."table1Id"=$1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should bulk update entity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1,
	"number" = ("entity0"."number"+100)
WHERE ("entity0"."table1Id"=1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should bulk update entity with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
      "$5" => "Updated",
      "$6" => 100.12,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $5,
	"real" = ("entity0"."real"+$6)
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with DIRTY concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 2n,
      "$3" => "TEST2",
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1
WHERE (("entity0"."table1Id"=$2) AND ("entity0"."name"=$3))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with VERSION concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1,
      "$3" => Uint8Array [
        1,
        200,
        0,
        0,
        100,
      ],
    }
,
    "query": 
"UPDATE "fixture"."Table2s" AS "entity0"
SET "t2Name" = $1
WHERE (("entity0"."id"=$2) AND ("entity0"."rowVersion"=$3))
RETURNING "entity0"."id","entity0"."rowVersion""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with VERSION concurrency check (fallback to ModifiedDate) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
      "$3" => "1971-01-02T00:00:00Z",
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."id"=$2) AND ("entity0"."modifiedDate"=$3))
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update without concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update ModifiedDate 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should not update Readonly Column, ex: CreatedDate 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should trigger before/after save event 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"SELECT "entity0"."id",
	"entity0"."bigint",
	"entity0"."binary",
	"entity0"."boolean",
	"entity0"."date",
	"entity0"."plainDate",
	"entity0"."dateTime",
	"entity0"."instant",
	"entity0"."decimal",
	"entity0"."decimalNumber",
	"entity0"."decimalDecimal",
	"entity0"."deleted",
	"entity0"."identifier",
	"entity0"."identifierString",
	"entity0"."integer",
	"entity0"."real",
	"entity0"."string",
	"entity0"."time",
	"entity0"."plainTime",
	"entity0"."createdDate",
	"entity0"."modifiedDate"
FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))
ORDER BY "entity0"."id"
FETCH NEXT 1 ROWS ONLY"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1Manies" AS "entity0"
SET "table1Id" = $1
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update relation value to inserted relation entity's identity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = $1
WHERE ("entity1"."id"=$2)
RETURNING "entity1"."id""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should do upsert 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11,
      "$2" => "Updated",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,$2,DEFAULT,DEFAULT)ON CONFLICT (id) DO UPDATE
SET "modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC',
	"string" = EXCLUDED."string"
RETURNING "entity0"."id","entity0"."computed" AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity (soft delete) + should update modifiedDate 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity (hard delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
USING (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity with key (soft delete) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity with key (hard delete) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE ("entity0"."id"=$1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete entity (soft delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete entity (hard delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
    }
,
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
USING (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete with include (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1));

UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete with include (hard delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"DELETE FROM "Table1Manies" AS "entity1"
USING (
	SELECT "entity0"."id",
		"entity0"."bigint",
		"entity0"."binary",
		"entity0"."boolean",
		"entity0"."date",
		"entity0"."plainDate",
		"entity0"."dateTime",
		"entity0"."instant",
		"entity0"."decimal",
		"entity0"."decimalNumber",
		"entity0"."decimalDecimal",
		"entity0"."deleted",
		"entity0"."identifier",
		"entity0"."identifierString",
		"entity0"."integer",
		"entity0"."real",
		"entity0"."string",
		"entity0"."time",
		"entity0"."plainTime",
		"entity0"."createdDate",
		"entity0"."modifiedDate"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1));

DELETE FROM "Table1Manies" AS "entity1"
USING (
	SELECT "entity0"."id",
		"entity0"."bigint",
		"entity0"."binary",
		"entity0"."boolean",
		"entity0"."date",
		"entity0"."plainDate",
		"entity0"."dateTime",
		"entity0"."instant",
		"entity0"."decimal",
		"entity0"."decimalNumber",
		"entity0"."decimalDecimal",
		"entity0"."deleted",
		"entity0"."identifier",
		"entity0"."identifierString",
		"entity0"."integer",
		"entity0"."real",
		"entity0"."string",
		"entity0"."time",
		"entity0"."plainTime",
		"entity0"."createdDate",
		"entity0"."modifiedDate"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should not cascade delete entity when not enabled (soft delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should cascade delete entity + relation (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete with SET NULL option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = NULL
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = NULL
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete with SET DEFAULT option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = 0
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = 0
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should trigger before/after delete event 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;
